k8s/yaml/backendapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: backendapp
  name: backendapp
  namespace: wieisdetrol
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backendapp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: backendapp
    spec:
      containers:
        - args:
            - sh
            - -c
            - yarn install && node dist/index.js
          image: node:18.1.0-alpine
          name: backendapp
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 2224
              protocol: TCP
          volumeMounts:
            - mountPath: /app
              name: widt-backend
            - mountPath: /backup
              name: widt-backup
          workingDir: /app
      # zie https://kubernetes.io/docs/concepts/workloads/pods/sidecar-containers/
      restartPolicy: Always
      volumes:
        - name: widt-backend
          persistentVolumeClaim:
            claimName: pvc-backendapp
        - name: widt-backup
          persistentVolumeClaim:
            claimName: pvc-backup
