k8s/yaml/borg-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: borgclient-wieisdetrol
  namespace: wieisdetrol
  labels:
    app: borgclient-wieisdetrol
spec:
  replicas: 1
  selector:
    matchLabels:
      app: borgclient-wieisdetrol
  template:
    metadata:
      labels:
        app: borgclient-wieisdetrol
    spec:
      containers:
        - image: "registry.diginfra.net/borgbackup/borgclient:v1.0.1"
          name: borgclient-wieisdetrol
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /backup
              name: backup
              readOnly: true
            - mountPath: /mnt
              name: certificates
              readOnly: true
      volumes:
        - name: backup
          persistentVolumeClaim:
            claimName: pvc-backup
        - name: certificates
          projected:
            sources:
              - secret:
                  name: "temporal-wieisdetrol-key"
              - configMap:
                  name: "temporal-wieisdetrol-cert"
              - configMap:
                  name: "temporal-ca-wfm-cert"
