k8s/yaml/bot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: bot
  name: bot
  namespace: wieisdetrol
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: bot
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: bot
    spec:
      containers:
        - args:
            - sh
            - -c
            - pip3 install -r requirements.txt && python run.py
          image: pytorch/pytorch:latest
          name: bot
          ports:
            - containerPort: 5000
              protocol: TCP
          volumeMounts:
            - mountPath: /app
              name: app
            - mountPath: /opt/conda/lib/python3.10/site-packages
              name: bot-site-packages
          workingDir: /app
      volumes:
        - name: app
          persistentVolumeClaim:
            claimName: pvc-bot-v2
        - name: bot-site-packages
          persistentVolumeClaim:
            claimName: pvc-bot-site-packages-v2
