k8s/yaml/backendapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: backendapp
  name: backendapp
  namespace: wieisdetrol
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: backendapp
