k8s/yaml/bot-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: bot
  name: bot
  namespace: wieisdetrol
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: bot
