k8s/yaml/widt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wieisdetrol
  namespace: wieisdetrol
  annotations:
    nginx.ingress.kubernetes.io/affinity: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
spec:
  rules:
    - host: api.wie-is-de-trol.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
